   useful values for people using softcoded connect_files. Commands can
   still be used before the connect screen is displayed. [MG]
 * When looking at an object, all its components (describe, descformat,
   conformat and exitformat) now share registers: a q-register set in
   the desc can be accessed in the conformat, and so on. [MG]

Hardcode:
 * Changed many things which were evaluating an attribute value manully to
   use call_ufun() instead, for better %+ / %= values, among other 
   benefits. [MG]
 * fetch_ufun_attrib now takes a new flag, UFUN_NAME, which will add the
   object's name to the beginning of the attr value (respect no_name and
   no_space attr flags), for @o-* attrs. [MG]
   
Fixes:
 * @lock/infilter, not @lock/infitler. [SW]
 * @shutdown/reboot handles failed database saves much more gracefully.
   [SW]
 * Help fixes by Wiggles. [MG]
 * Fix a few places that could trigger an integer division exception.
   Reported by Ashen-Shugar. [SW]
 * A number of places in the hardcode incorrectly took TINY_MATH into account
   when deciding if something was a valid number or not. From a report by
   Daniel Powell. [MG]
 * doing() now evaluates the DOING attribute with better values for %# and
   %@. From a report by Padraic. [MG]

Functions:
 * isregexp() to validate regexp patterns. Suggested by Padraic. [DC]

Version 1.8.4 patchlevel 7                                 Sep 25, 2011

Deprecation:
 * @elock, @eunlock, @ulock and @uunlock are deprecated. [SW]
 * @doing is now deprecated (see below).
 * The "newline_one_char" mush.cnf option is now deprecated, and will soon
   always be "Yes". If you have it set to No and have any code that assumes
   strlen(%r) == 2, you should change it now. [MG]

Major changes:
 * DOING is now a standard attribute. Your @doing can be any length, and
   doing() returns the whole string (though it will still be truncated when
   displayed on WHO), can contain ANSI and will be evaluated each time it's 